PhaseType 0.2.0
===============

 * Multiple fixes to enable reinclusion on CRAN.
 * In particular dependence on archived HI package removed by bringing in C code
   for ARMS originally written by Wally Gilks, with updates by Louis Aslett to
   pass strict warning and CRAN checks. Previously this code was accessed via
   the HI package.

PhaseType 0.1.3
===============

 * Added ability to have constant multiple of parameters in the generator matrix for phtMCMC2().
 * Improved numerical stability of ECS method in phtMCMC2().
 * Added extra parameter correctness checks to all functions.
 * Corrected some errors in citations.

PhaseType 0.1.2
===============

 * Minor fix due to updated ggplot2 package.

PhaseType 0.1.1
===============

 * Minor fix because of incorrect calls into private R API.

PhaseType 0.1.0
===============

 * First public release
 * phtMCMC() function for Bayesian inference on dense CTMC generator
 * phtMCMC2() function for Bayesian inference on structured CTMC generator